--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1521,7 +1521,7 @@ transform: rotate(-45deg);
 }
 
 .bird {
-	background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/174479/bird-cells.svg);
+	background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/174479/bird-cells.svg');
 	background-size: auto 100%;
 	width: 88px;
 	height: 125px;
